# model_viewer

./: .gitignore  .ignore  CMakeLists.txt  CMakePresets.json
shaders/: light_shader.vs  model_shader.fs  model_shader.vs  test.fs  test.vs
src/: GlWidget.cpp  GlWidget.h  MainWindow.cpp  MainWindow.h  main.cpp
src/Camera/: Camera.cpp  Camera.h
src/Light/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/Mesh/: Mesh.cpp  Mesh.h
src/Model/: Model.cpp  Model.h
src/Shader/: Shader.cpp  Shader.h
src/Shaders/: test.vs
src/Texture/: Texture.cpp  Texture.h
